@@ -44,6 +44,9 @@ dont_pause_for_love_the_king_messages = true
 ; Holding shift when clicking a specialist on the city screen will switch to the previous, instead of the next, specialist type
 reverse_specialist_order_with_shift = true
 
+; Pressing the Z key on the city screen will zoom the map in/out
+toggle_zoom_with_z_on_city_screen = true
+
 ; When king units are spawned they're named after the leader of their civ. This is undesirable in modded games where the king flag is often used
 ; on units that aren't intended to be actual kings. This setting helps by bypassing the king unit naming logic when regicide is not enabled.
 dont_give_king_names_in_non_regicide_games = true
