@@ -1,4 +1,5 @@
 - Fix AI players sometimes spawning nonsensical units when hitting a unit limit
+- Pressing the Z key on the city screen toggles the zoom level of the map display
 
 * RELEASE 21
 - Allow perfume amounts to be specified as percentages
